# collaborators

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: collaborators.xlsx
notebooks/: tutorial.ipynb
src/collabgraph/: __init__.py  cli.py  config.py  cypher_examples.py  ingest.py  loader.py  schema.py  viz.py
src/collabgraph/web/: __init__.py  app.py  cli.py  routes.py  services.py
tests/: conftest.py  test_ingest.py  test_loader.py  test_services.py  test_viz.py
web/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/frontend/src/: App.tsx  styles.css
web/frontend/src/components/: Header.tsx  LegendShapeGlyph.tsx  Stats.tsx  Toast.tsx
web/frontend/src/lib/: api.ts  legendContrast.ts  palette.ts
web/frontend/src/types/: cytoscape-svg.d.ts
web/frontend/src/views/: CypherView.tsx  GraphView.tsx  MapView.tsx  SetupView.tsx
