[project]
name = "collabgraph"
version = "0.1.0"
description = "Build a collaborator network graph in Neo4j from an Excel input file."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Vernon" }]
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "neo4j>=5.20",
  "python-dotenv>=1.0",
  "networkx>=3.3",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "typer>=0.12",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]

[project.scripts]
collabgraph = "collabgraph.cli:app"
collabgraph-web = "collabgraph.web.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collabgraph"]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "nbclient>=0.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
